--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ google-assistant-sdk[auth_helpers]==0.1.0
 grpc-google-cloud-speech-v1beta1==0.14.0
 protobuf==3.1.0
 configargparse==0.11.0
-
+phue==0.9
+rgbxy==0.5
